@startuml

abstract class Person {
  - name: string
  + Person(n: string)
  + {abstract} reactToNewPerson(other: Person*): void
  + getName(): string
}

class YoungMan {
  + YoungMan(n: string)
  + reactToNewPerson(other: Person*): void
}

class Girl {
  + Girl(n: string)
  + reactToNewPerson(other: Person*): void
}

Person <|-- YoungMan
Person <|-- Girl

@enduml